Initial Aeron transport Java client